# cep-85

./: Makefile  README.md  rust-toolchain
.github/workflows/: ci-cep-85-client.yml  ci-cep-85.yml  nightly-scheduled-test.yml  publish-cep-85-client.yml  publish-cep-85-contracts.yml
ci/: package_wasm.sh
client-js/: README.md  TUTORIAL.md  package-lock.json  package.json  tsconfig.json
client-js/examples/: common.ts  install.ts  usage.ts
client-js/scripts/: copy-and-convert-wasms.ts
client-js/src/: CEP85Client.ts  EventEnabledContract.ts  TypedContract.ts  constants.ts  events.ts  index.ts  types.ts
client-js/test/: index.test.spec.ts
client-js/test/jsons/: install-args-burner_list.json  install-args.json  mint-args.json  set_uri-args.json  transfer-args.json
client-js/tests/: index.test.spec.ts
client-js/tests/jsons/: batch_burn-args.json  batch_mint-args.json  batch_transfer-args.json  burn-args.json  change_security-args.json  install-args-burner_list.json  install-args.json  set_approval_for_all-args.json  set_modalities-args.json  set_total_supply_of-args.json  set_total_supply_of_batch-args.json  transfer-args.json  upgrade-args.json
client/make_dictionary_item_key/: Cargo.toml
client/make_dictionary_item_key/src/: main.rs
contract/: Cargo.toml
contract/src/: balances.rs  constants.rs  entry_points.rs  error.rs  events.rs  lib.rs  main.rs  modalities.rs  operators.rs  security.rs  supply.rs  uri.rs  utils.rs
contracts/: Cargo.toml
contracts/cep85/: Cargo.toml
contracts/cep85/src/: balances.rs  constants.rs  entry_points.rs  error.rs  events.rs  lib.rs  main.rs  modalities.rs  security.rs  supply.rs  uri.rs  utils.rs
contracts/test/: Cargo.toml
contracts/test/src/: constants.rs  main.rs  utils.rs
docs/: using-casper-client.md
test-contract/: Cargo.toml
test-contract/src/: constants.rs  main.rs  utils.rs
tests/: Cargo.toml
tests/src/: allowance.rs  balances.rs  burn.rs  events.rs  filter.rs  fungible.rs  install.rs  lib.rs  mint.rs  modalities.rs  security.rs  supply.rs  transfer.rs  upgrade.rs  uri.rs
tests/src/utility/: constants.rs  installer_request_builders.rs  mod.rs  support.rs
