[package]
name = "cep1155"
version = "1.0.0"
edition = "2018"
description = "A library for developing CEP-1155 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep-1155"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/cep-1155"
license-file = "../LICENSE"

[dependencies]
casper-contract = { version = "3.0.0", optional = true }
casper-types = "3.0.0"
casper-event-standard = { version = "0.4.0", default-features = false }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "cep1155"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]
