[workspace]
members = ["cep85", "test"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://casperlabs.io"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/casper-ecosystem/cep-85"

[workspace.dependencies]
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3" }

[profile.release]
codegen-units = 1
lto = true
