[package]
name = "tests"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
cep85 = { path = "../contracts/cep85", default-features = false }
cep85-test-contract = { path = "../contracts/test" }
casper-contract = { version = "3.0.0", default-features = false, features = ["std"] }
casper-engine-test-support = "5.0.0"
casper-execution-engine = "5.0.0"
casper-types = "3.0.0"
casper-event-standard = { version = "0.4.0", default-features = false }

[lib]
name = "tests"
bench = false
doctest = false
