[package]
name = "tests"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
cep85 = { path = "../contracts/cep85", default-features = false }
cep85-test-contract = { path = "../contracts/test", default-features = false }
casper-engine-test-support = "7.0.1"
casper-execution-engine = "7.0.1"
casper-types = "4.0.1"
casper-event-standard = { version = "0.5.0", default-features = false }

[lib]
name = "tests"
bench = false
doctest = false
