[package]
name = "tests"
version = "2.0.0"
edition = "2021"

[dev-dependencies]
cep85 = { path = "../contracts/cep85", default-features = false }
cep85-test-contract = { path = "../contracts/test", default-features = false }
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", default-features = false }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", default-features = false }
casper-storage = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", default-features = false }
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", default-features = false }
casper-event-standard = { git = "https://github.com/deuszex/casper-event-standard", branch = "condor", default-features = false }

[lib]
name = "tests"
bench = false
doctest = false
