[package]
name = "cep85-make-dictionary-item-key"
version = "2.0.0"
edition = "2021"
homepage = "https://casperlabs.io"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/casper-ecosystem/cep-85"

[dependencies]
cep85 = { path = "../../contracts/cep85", default-features = false, features = [
  "contract-support",
] }
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3" }
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3" }

[[bin]]
name = "cep85_make_dictionary_item_key"
path = "src/main.rs"
bench = false
doctest = false
test = false
