[package]
name = "cep85"
version = "1.0.0"
description = "A library for developing CEP-85 tokens for the Casper network."
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
casper-contract = { version = "3.0.0", optional = true, default-features = false }
casper-types.workspace = true
casper-event-standard = { version = "0.4.0", default-features = false }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "cep85"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract-support", "casper-contract/no-std-helpers"]
contract-support = ["casper-contract"]
