[package]
name = "cep85"
version = "1.0.0"
description = "A library for developing CEP-85 tokens for the Casper network."
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
casper-contract = { version = "4.0.0", optional = true }
casper-types.workspace = true
casper-event-standard = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "cep85"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]

[replace]
"zeroize:1.8.0" = { git = "https://github.com/your-forked-repo/zeroize", tag = "v1.7.0" }
