[package]
name = "cep85-test-contract"
version = "1.0.0"
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cep85 = { path = "../cep85" }
casper-contract = "3.0.0"
casper-types.workspace = true

[[bin]]
name = "cep85_test_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false
